--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.4.8"
+    "vite": "^5.4.9"
+  },
+  "dependencies": {
+    "patitas-frontend-js-b": "file:"
   }
 }
